force-app/main/default/objects/Campaign/fields/Booth_Construction_Actual__c.field-meta.xml
<CustomField>
    <fullName>Booth_Construction_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booth Construction (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>