force-app/main/default/objects/Campaign/fields/Campaign_Fee__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Fee__c</fullName>
    <description>This is to indicate the campaign fee. If the campaign fee is not applicable, users to leave the value  as it is ‘0’ in the field.</description>
    <inlineHelpText>Input value ‘0’ if fee is not applicable</inlineHelpText>
    <label>Campaign Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>