force-app/main/default/objects/Campaign/fields/City_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <label>City/State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>