force-app/main/default/objects/Campaign/fields/Cost_Others_Actual__c.field-meta.xml
<CustomField>
    <fullName>Cost_Others_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost Others (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>