force-app/main/default/objects/Campaign/fields/Equipment_Rental_Actual__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Rental_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Equipment Rental (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>