force-app/main/default/objects/Campaign/fields/Event_Day_OTD_Sales_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Event_Day_OTD_Sales_Local_Currency__c</fullName>
    <label>Event Day OTD Sales (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>