force-app/main/default/objects/Campaign/fields/Event_Objective__c.field-meta.xml
<CustomField>
    <fullName>Event_Objective__c</fullName>
    <label>Event Objective</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>