force-app/main/default/objects/Campaign/fields/Event_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Sub_Type__c</fullName>
    <label>Event Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDE/Hands-on Workshop</fullName>
            </value>
            <value>
                <fullName>Conference/Seminar</fullName>
            </value>
            <value>
                <fullName>Exhibition Booth</fullName>
            </value>
            <value>
                <fullName>IM Group Chat</fullName>
            </value>
            <value>
                <fullName>Institution Program</fullName>
            </value>
            <value>
                <fullName>Table Workshop</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>