force-app/main/default/objects/Campaign/fields/GL_Type__c.field-meta.xml
<CustomField>
    <fullName>GL_Type__c</fullName>
    <description>Global Campaign Type</description>
    <formula>CASE(RecordType.Name ,

&apos;Marketing &amp; Engagement Campaign&apos;,

CASE( Type ,
&apos;Online Events&apos;,
CASE( Event_Sub_Type__c ,
&apos;IM Group Chat&apos;,&apos;Webinar&apos;,
&apos;Webinars&apos;, &apos;Webinar&apos;,
&apos;&apos;)
,
&apos;Offline Events&apos;,
CASE( Event_Sub_Type__c ,
&apos;Exhibition Booth&apos;,&apos;Congress&apos;,
&apos;CDE/Hands-on Workshop&apos;, &apos;Lecture with hands-on&apos;,
&apos;Conference/Seminar&apos;, &apos;Congress&apos;,
&apos;Institution Program&apos;, &apos;Lecture&apos;,
&apos;Table Workshop&apos;, &apos;Lecture with demo&apos;,
&apos;&apos;)
,
&apos;&apos;)
,


&apos;Learning Focused Program&apos;,
CASE( Type ,
&apos;Online Events&apos;,
CASE( Event_Sub_Type__c ,
&apos;IM Group Chat&apos;,&apos;Sales associates Workshop&apos;,
&apos;Webinars&apos;, &apos;Sales associates Workshop&apos;,
&apos;&apos;)
,
&apos;Offline Events&apos;,
CASE( Event_Sub_Type__c ,
&apos;CDE/Hands-on Workshop&apos;,&apos;Sales associates Workshop&apos;,
&apos;Institution Program&apos;, &apos;Sales associates Workshop&apos;,
&apos;Table Workshop&apos;, &apos;Sales associates Workshop&apos;,
&apos;&apos;)
,
&apos;&apos;)
,
&apos;Sponsorships&apos;,
CASE( Type ,
&apos;Online Events&apos;,
CASE( Event_Sub_Type__c ,
&apos;IM Group Chat&apos;,&apos;Webinar&apos;,
&apos;Webinars&apos;, &apos;Webinar&apos;,
&apos;&apos;)
,
&apos;Offline Events&apos;,
CASE( Event_Sub_Type__c ,
&apos;Exhibition Booth&apos;,&apos;Congress&apos;,
&apos;CDE/Hands-on Workshop&apos;, &apos;Lecture with hands-on&apos;,
&apos;Conference/Seminar&apos;, &apos;Congress&apos;,
&apos;Institution Program&apos;, &apos;Lecture&apos;,
&apos;Table Workshop&apos;, &apos;Lecture with demo&apos;,
&apos;&apos;)
,
&apos;&apos;)
,
&apos;NA&apos;)</formula>
    <inlineHelpText>Global Campaign Type</inlineHelpText>
    <label>GL_Type</label>
    <type>Text</type>
</CustomField>