force-app/main/default/objects/Campaign/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <description>This is to indicate the total number of attendees that have attended the event/ campaign program/ marketing effort.</description>
    <inlineHelpText>The total number of attendees that have attended the event/ campaign program/ marketing effort.</inlineHelpText>
    <label>Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>