force-app/main/default/objects/Campaign/fields/Participation_Fee_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Participation_Fee_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Participation Fee (Estimate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>