force-app/main/default/objects/Campaign/fields/Pre_Post_TO_Sales_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_TO_Sales_Local_Currency__c</fullName>
    <label>Pre &amp; Post TO Sales (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>