force-app/main/default/objects/Campaign/fields/Promo_Materials_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Promo_Materials_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Promo Materials (Estimate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>