force-app/main/default/objects/Campaign/fields/Speaker_Airfare_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Airfare_Estimate__c</fullName>
    <label>Speaker Airfare (Estimate)</label>
    <summarizedField>Speaker_Detail__c.Speaker_Airfare_Estimate__c</summarizedField>
    <summaryForeignKey>Speaker_Detail__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>