force-app/main/default/objects/Campaign/fields/Speaker_Honorarium_Actual__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Honorarium_Actual__c</fullName>
    <label>Speaker Honorarium (Actual)</label>
    <summarizedField>Speaker_Detail__c.Speaker_Honorarium_Actual__c</summarizedField>
    <summaryForeignKey>Speaker_Detail__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>