force-app/main/default/objects/Campaign/fields/Sponsorship_Account__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorship Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>