force-app/main/default/objects/Campaign/fields/Sponsorship_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorship Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Sponsorship_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>