force-app/main/default/objects/Campaign/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <formula>Speaker_Accomodation_Estimate__c +
 Speaker_Airfare_Estimate__c  +
 Speaker_Honorarium_Estimate__c +
 Participation_Fee_Estimate__c +
 Booth_Construction_Estimate__c +
 Venue_Rental_Estimate__c +
 Equipment_Rental_Estimate__c +
 Workshop_Demo_Materials_Estimate__c +
 Promo_Materials_Estimate__c +
 Travelling_Accommodation_Estimate__c +
 Cost_Others_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>