force-app/main/default/objects/Campaign/fields/Total_TO_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_TO_Sales__c</fullName>
    <formula>Event_Day_TO_Sales_Local_Currency__c +  Pre_Post_TO_Sales_Local_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TO Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>