force-app/main/default/objects/Campaign/fields/Travelling_Accommodation_Actual__c.field-meta.xml
<CustomField>
    <fullName>Travelling_Accommodation_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Travelling &amp; Accommodation (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>