force-app/main/default/objects/Campaign/fields/Workshop_Demo_Materials_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Demo_Materials_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workshop &amp; Demo Materials (Estimate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>