force-app/main/default/objects/Campaign/recordTypes/Learning_Focused_Program.recordType-meta.xml
<RecordType>
    <fullName>Learning_Focused_Program</fullName>
    <active>true</active>
    <description>Mini Workshop</description>
    <label>Learning Focused Program</label>
</RecordType>