force-app/main/default/objects/Campaign/recordTypes/Marketing_Engagement_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Engagement_Campaign</fullName>
    <active>true</active>
    <description>Online Event, Offline Event, Promotional Campaign</description>
    <label>Marketing &amp; Engagement Campaign</label>
</RecordType>