force-app/main/default/objects/Campaign/recordTypes/Sponsorships.recordType-meta.xml
<RecordType>
    <fullName>Sponsorships</fullName>
    <active>true</active>
    <description>Event related to Sponsors</description>
    <label>Sponsorships</label>
</RecordType>