force-app/main/default/objects/Campaign/validationRules/Cant_select_approval_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_select_approval_status</fullName>
    <active>false</active>
    <description>User shouldnt be able to select status related for approval. User have to submit the approval.</description>
    <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp; (ISCHANGED(Status) || ISNEW()) &amp;&amp; (ISPICKVAL(Status,&apos;Pending Approval&apos;) || ISPICKVAL(Status,&apos;Approved&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You cannot change status to Pending Approval or Approved manually. You have to submit for approval.</errorMessage>
</ValidationRule>