force-app/main/default/objects/Campaign/validationRules/Draft_only_for_new_campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>Draft_only_for_new_campaign</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL( Status , &apos;Draft&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can only select &apos;Draft&apos; for new event and require approval to move the status to active.</errorMessage>
</ValidationRule>