force-app/main/default/objects/Campaign/validationRules/Validate_event_enddate_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_event_enddate_range</fullName>
    <active>true</active>
    <description>Actual Event End Date must be between Sales Start Date and Sales End Date.</description>
    <errorConditionFormula>OR(
    EndDate &lt; Sales_Start_Date__c,
    EndDate &gt; Sales_Close_Date__c
)</errorConditionFormula>
    <errorDisplayField>EndDate</errorDisplayField>
    <errorMessage>Actual Event End Date must be between Sales Start Date and Sales End Date.</errorMessage>
</ValidationRule>