force-app/main/default/objects/Campaign/validationRules/Validate_event_startdate_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_event_startdate_range</fullName>
    <active>true</active>
    <description>Actual Event Start Date must be between Sales Start Date and Sales End Date.</description>
    <errorConditionFormula>OR(
    StartDate &lt; Sales_Start_Date__c ,
    StartDate &gt; Sales_Close_Date__c
)</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Actual Event Start Date must be between Sales Start Date and Sales End Date.</errorMessage>
</ValidationRule>