force-app/main/default/objects/Campaign/validationRules/Validate_Sales_StartDate_Before_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Sales_StartDate_Before_EndDate</fullName>
    <active>true</active>
    <description>Sales Start Date must be earlier than Sales Close Date.</description>
    <errorConditionFormula>Sales_Start_Date__c &gt; Sales_Close_Date__c</errorConditionFormula>
    <errorDisplayField>Sales_Start_Date__c</errorDisplayField>
    <errorMessage>Sales Start Date must be earlier than Sales Close Date.</errorMessage>
</ValidationRule>