force-app/main/default/objects/Campaign/validationRules/Validate_StartDate_Before_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_StartDate_Before_EndDate</fullName>
    <active>true</active>
    <description>Actual Event Start Date must be earlier than End Date.</description>
    <errorConditionFormula>StartDate &gt; EndDate</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Actual Event Start Date must be earlier than End Date.</errorMessage>
</ValidationRule>