force-app/main/default/objects/Campaign/listViews/All_Event_Campaign.listView-meta.xml
<ListView>
    <fullName>All_Event_Campaign</fullName>
    <columns>Country__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Sales_Start_Date__c</columns>
    <columns>Sales_Close_Date__c</columns>
    <columns>Total_Actual_Cost__c</columns>
    <columns>Total_TO_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Event Campaign</label>
</ListView>