force-app/main/default/objects/Campaign/listViews/All_Pending_Approval_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Pending_Approval_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>All Pending Approval Campaigns</label>
</ListView>